tests222/tests2/test328.out
lli: <stdin>:1:1: error: expected top-level entity
line 24: variable a is not defined
^
